Add header and footer, jumbotron and content to the ColorVeil page

--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -8,38 +8,138 @@
 
     <!-- Bootstrap CSS -->
     <link href='https://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:200" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
 </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <img class="header-logo" alt="Aurelitec" src="/img/theme/branding/aurelitec-logo-header.png" />
+                </a>
 
+                <button class="navbar-toggler hidden-md-up pull-xs-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
+                <div class="clearfix hidden-md-up"></div>
+
+                <div class="navbar-panel collapse navbar-toggleable-sm" id="collapsingNavbar">
+                    <ul class="nav">
+                        <a class="nav-link" href="/apps/">Apps</a>
+                        <a class="nav-link" href="/reviews/">Reviews</a>
+                        <a class="nav-link" href="/support/">Support</a>
+                        <a class="nav-link" href="/about/">About</a>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
           <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
-          <h1>ColorVeil. A color filter over your screen. Dim screen brightness, or browse the Web in Red.</h1>
-          <a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Free Download</a>
+          <h1 class="jumbotron-heading"><strong class="appname">ColorVeil.</strong> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
+          <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
+          <a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Free Download for Windows</a>
       </div>
     </div>
 
     <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>Screen Color Filter</h3>
-                <p>ColorVeil adds a completely customizable color filter over your Desktop, Internet browser, video player, document, email, or program. You can continue to work, play, read, write, or browse as usual. </p>
+        <div class="row content-section">
+            <div class="col-md-4">
+                <h3 class="item-heading">Color Filter</h3>
+                <p>ColorVeil adds a completely customizable color filter over your Desktop, Internet browser, video player, document, email, or program. You can work, play, read, write, or browse as usual. </p>
             </div>
-            <div class="col-sm-4">
-                <h3>Dyslexia / Irlen</h3>
+            <div class="col-md-4">
+                <h3 class="item-heading">Dyslexia / Irlen</h3>
                 <p>ColorVeil can help people with Dyslexia / Meares Irlen's Syndrome. It applies a coloured tint across the screen, and allows full customisation to match the colours stated by the optometrist.</p>
             </div>
-            <div class="col-sm-4">
-                <h3>Dim Screen Brightness</h3>
+            <div class="col-md-4">
+                <h3 class="item-heading">Extra Dimmer</h3>
                 <p>ColorVeil can reduce screen brightness, even below its lowest available setting. This feature helps you reduce eye strain, especially at night, and may help save battery on notebooks and tablets.</p>
             </div>
         </div>
+
+        <h2 class="section-heading">Key Features</h2>
+        <div class="row content-section">
+            <div class="col-md-10">
+
+                <div class="clearfix">
+                    <div class="feature-decoration pull-xs-left"></div>
+                    <h4 class="item-heading">Customizable</h4>
+                    <p>ColorVeil lets you easily customize the filter color and opacity. Choose Orange to block out the blue light responsible for sleep deprivation, or any other color for any other reason.</p>
+                </div>
+
+                <div class="clearfix">
+                    <div class="feature-decoration pull-xs-left"></div>
+                    <h4 class="item-heading">Easy On/Off</h4>
+                    <p>ColorVeil makes it easy to turn the color filter on and off: simply left-click its icon in the notification area, at the far right of the taskbar. Or press a (customizable) keyboard shortcut.</p>
+                </div>
+
+                <div class="clearfix">
+                    <div class="feature-decoration pull-xs-left"></div>
+                    <h4 class="item-heading">Stealth &amp; More</h4>
+                    <p>ColorVeil can go stealth and hide its turn off switch, helping you play pranks on your friends or family. It can also spice up screencasts or presentations, by adding a color filter to the video output.</p>
+                </div>
+
+            </div>
+        </div>
+
+
+        <h2 class="section-heading">Reviews</h2>
+        <div class="row content-section">
+            <div class="col-sm-6 col-lg-3">
+                <h3 class="quote-heading"><a href="http://www.download3k.com/Internet/Browser-Tools/Download-ColorVeil.html" target="_blank">Download3K</a></h3>
+                <p>"Install ColorVeil and your monitor will never be boring again."</p>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <h3 class="quote-heading"><a href="http://www.ilovefreesoftware.com/29/windows/add-color-filter-browser-video-player-desktop.html" target="_blank">I Love Free Software</a></h3>
+                <p>"Probably one of the best ways to minimize eye strain and irritation while using your PC."</p>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <h3 class="quote-heading"><a href="http://www.rockybytes.com/colorveil" target="_blank">Rocky Bytes</a></h3>
+                <p>"Add a layer of color to everything that you do with ColorVeil." (It Rocks!)</p>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <h3 class="quote-heading"><a href="http://www.majorgeeks.com/news/story/new_on_majorgeeks_colorveil.html" target="_blank">MajorGeeks</a></h3>
+                <p>"Adds a colored filter over your entire desktop for saving you from eye strain."</p>
+            </div>
+        </div>
+
+
     </div>
+
+    <section class="prefooter">
+        <div class="container">
+            <blockquote class="blockquote content-section">
+                <p>"As Head of Learning support we have been looking for the last few years to support children and young people with Dyslexia / Meares Irlen syndrome by way of coloured overlays, but have never been able to find a solution that works on computers. ColorVeil gives us the perfect solution, allowing full customisation by way of overlay to match the colours stated by the optometrist, removing a significant barrier to that young person's learning."</p>
+                <footer class="blockquote-footer">Mr M Webster, St Edmund Arrowsmith Catholic High School, UK</footer>
+            </blockquote>
+        </div>
+    </section>
+
+    <footer class="site-footer">
+        <div class="container">
+            <nav class="nav nav-inline">
+                <a class="nav-link" href="/cinemadrape/">CinemaDrape</a>
+                <a class="nav-link" href="/colorveil/">ColorVeil</a>
+                <a class="nav-link" href="/injuredpixels/">InjuredPixels</a>
+                <a class="nav-link" href="/pixelhealer/">PixelHealer</a>
+                <a class="nav-link" href="/colortypist/">Colortypist</a>
+                <a class="nav-link" href="/whatsmyco/">WhatsMyCo</a>
+                <a class="nav-link" href="/thumbico/">Thumbico</a>
+                <a class="nav-link" href="/htmtied/">HTMtied</a>
+            </nav>
+            <nav class="nav nav-inline">
+                <a class="nav-link" href="/apps/">Apps</a>
+                <a class="nav-link" href="/reviews/">Reviews</a>
+                <a class="nav-link" href="/support/">Support</a>
+                <a class="nav-link" href="/about/">About</a>
+            </nav>
+            <p>Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="/about/privacy/">Privacy Policy</a></p>
+        </div>
+    </footer>
 
 
     <!-- jQuery first, then Bootstrap JS. -->
