Improve footer and ColorVeil for Windows program page * add footer social links

--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -24,12 +24,12 @@
                 <div class="clearfix hidden-md-up"></div>
 
                 <div class="navbar-panel collapse navbar-toggleable-sm" id="collapsingNavbar">
-                    <ul class="nav">
+                    <nav class="nav">
                         <a class="nav-link" href="/apps/">Apps</a>
                         <a class="nav-link" href="/reviews/">Reviews</a>
                         <a class="nav-link" href="/support/">Support</a>
                         <a class="nav-link" href="/about/">About</a>
-                    </ul>
+                    </nav>
                 </div>
             </div>
         </nav>
@@ -60,32 +60,20 @@
                 <p>ColorVeil can reduce screen brightness, even below its lowest available setting. This feature helps you reduce eye strain, especially at night, and may help save battery on notebooks and tablets.</p>
             </div>
         </div>
-
-        <h2 class="section-heading">Key Features</h2>
         <div class="row content-section">
-            <div class="col-md-10">
-
-                <div class="clearfix">
-                    <div class="feature-decoration pull-xs-left"></div>
-                    <h4 class="item-heading">Customizable</h4>
-                    <p>ColorVeil lets you easily customize the filter color and opacity. Choose Orange to block out the blue light responsible for sleep deprivation, or any other color for any other reason.</p>
-                </div>
-
-                <div class="clearfix">
-                    <div class="feature-decoration pull-xs-left"></div>
-                    <h4 class="item-heading">Easy On/Off</h4>
-                    <p>ColorVeil makes it easy to turn the color filter on and off: simply left-click its icon in the notification area, at the far right of the taskbar. Or press a (customizable) keyboard shortcut.</p>
-                </div>
-
-                <div class="clearfix">
-                    <div class="feature-decoration pull-xs-left"></div>
-                    <h4 class="item-heading">Stealth &amp; More</h4>
-                    <p>ColorVeil can go stealth and hide its turn off switch, helping you play pranks on your friends or family. It can also spice up screencasts or presentations, by adding a color filter to the video output.</p>
-                </div>
-
+            <div class="col-md-4">
+                <h4 class="item-heading">Customizable</h4>
+                <p>ColorVeil lets you easily customize the filter color and opacity. For example, choose Orange to block out the blue light responsible for sleep deprivation. Or choose any other color, for any other reason.</p>
+            </div>
+            <div class="col-md-4">
+                <h4 class="item-heading">Easy On/Off</h4>
+                <p>ColorVeil makes it very easy to instantly turn the color filter on and off: simply click its icon in the notification area, at the far right of the taskbar. Or press a (customizable) keyboard shortcut.</p>
+            </div>
+            <div class="col-md-4">
+                <h4 class="item-heading">Stealth &amp; More</h4>
+                <p>ColorVeil can go stealth and hide its turn off switch, helping you play pranks on your friends or family. It can also spice up screencasts or presentations, by adding color to the video output.</p>
             </div>
         </div>
-
 
         <h2 class="section-heading">What Others Are Saying</h2>
         <div class="row content-section">
@@ -116,10 +104,18 @@
 
     <div class="stripe stripe-featured-logos">
         <div class="container">
-            <img class="featured-logo" width="200" src="/img/third/reviews/p/pcadvisor/pcadvisor-white-transparent.png" alt="PC Advisor" />
-            <img class="featured-logo" width="75" src="/img/third/reviews/d/digi24/digi24-white-transparent.png" alt="Digi24" />
-            <img class="featured-logo" width="200" src="/img/third/reviews/c/computerworld/computerworld-white-transparent.png" alt="Computerworld" />
-            <img class="featured-logo" width="250" src="/img/third/reviews/r/rockybytes/rockybytes-white-transparent.png" alt="Rocky Bytes" />
+            <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
+                <img class="featured-logo" width="200" src="/img/third/reviews/p/pcadvisor/pcadvisor-white-transparent.png" alt="PC Advisor" />
+            </a>
+            <a href="http://www.digi24.ro/Stiri/Digi24/Sci-tech/Tehnologie/Aplicatie+pentru+dislexici" target="_blank">
+                <img class="featured-logo" width="75" src="/img/third/reviews/d/digi24/digi24-white-transparent.png" alt="Digi24" />
+            </a>
+            <a href="http://www.computerworlduk.com/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
+                <img class="featured-logo" width="200" src="/img/third/reviews/c/computerworld/computerworld-white-transparent.png" alt="Computerworld" />
+            </a>
+            <a href="http://www.rockybytes.com/colorveil" target="_blank">
+                <img class="featured-logo" width="250" src="/img/third/reviews/r/rockybytes/rockybytes-white-transparent.png" alt="Rocky Bytes" />
+            </a>
         </div>
     </div>
 
@@ -141,7 +137,12 @@
                 <a class="nav-link" href="/support/">Support</a>
                 <a class="nav-link" href="/about/">About</a>
             </nav>
-            <p>Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="/about/privacy/">Privacy Policy</a></p>
+            <p class="copyright">Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="/about/privacy/">Privacy Policy</a></p>
+            <nav class="nav nav-inline">
+                <a class="nav-link" href="https://twitter.com/aurelitec" target="_blank"><img class="social-icon" src="/img/third/social/twitter.svg" alt="Twitter" title="Twitter" /></a>
+                <a class="nav-link" href="https://github.com/aurelitec/" target="_blank"><img class="social-icon" src="/img/third/social/github.svg" alt="GitHub" title="GitHub" /></a>
+                <a class="nav-link" href="https://getpocket.com/@aurelitec" target="_blank"><img class="social-icon" src="/img/third/social/pocket.svg" alt="Pocket" title="Pocket" /></a>
+            </nav>
         </div>
     </footer>
 
