--- a/_testimonials/colorveil/middlewichhigh.html
+++ b/_testimonials/colorveil/middlewichhigh.html
@@ -3,10 +3,9 @@ guid  : 7f1da397a5f443d4a728ae7cf1c829a0
 title : Middlewich High School, UK about ColorVeil
 app   : ColorVeil
 by    : Middlewich High School, UK
-link  :
+link  : /colorveil/testimonials/middlewichhigh/
 date  : 2016-05-04
 words : []
 ---
 
-<p>"At one stroke, Middlewich High School has been able to improve its staff's health by reducing eye strain, while also broadening access to learning opportunities for many of its students, all at zero cost to the taxpayer. We are highly satisfied with this outcome, commend the developer for his generous work and would very much recommend ColorVeil to other schools."</p>
-<p><a href="/colorveil/testimonials/middlewichhigh/">Read the entire testimonial</a></p>
+<p>"At one stroke, Middlewich High School has been able to improve its staff's health by reducing eye strain, while also broadening access to learning opportunities for many of its students, all at zero cost to the taxpayer. We are highly satisfied with this outcome, commend the developer for his generous work and would very much recommend ColorVeil to other schools." <a href="/colorveil/testimonials/middlewichhigh/">Read More</a></p>
