--- a/colorveil/reviews/index.html
+++ b/colorveil/reviews/index.html
@@ -1,44 +1,21 @@
 ---
-active: reviews
+app    : colorveil
+layout : app-page
+active : reviews
 ---
 
-    {% include jumbotrons/colorveil.html %}
+{% capture thecontent %}
+{% assign reviews = site.reviews | sort: 'by', 'last' %}
+{% for review in reviews %}
+    {% include templates/review.html %}
+{% endfor %}
+{% endcapture %}
+{% include templates/contentsection.html heading="Reviews" %}
 
-    <div class="container">
-        {% include sectionmenus/colorveil.html %}
-
-        <!-- Main Content -->
-        <div class="main-content">
-
-            <div class="row m-b-2">
-                <div class="col-lg-2">
-                    <h2 class="square-heading">Reviews</h2>
-                </div>
-                <div class="col-lg-8">
-                    {% assign reviews = site.reviews | sort: 'by', 'last' %}
-                    {% for review in reviews %}
-                        {% include templates/review.html %}
-                    {% endfor %}
-                </div>
-                <div class="col-lg-2">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-2">
-                    <h2 class="square-heading">Testimonials</h2>
-                </div>
-                <div class="col-lg-8">
-                    {% assign testimonials = site.testimonials | sort: 'by', 'last' %}
-                    {% for testimonial in testimonials %}
-                        {% include templates/testimonial.html %}
-                    {% endfor %}
-                </div>
-                <div class="col-lg-2">
-                </div>
-            </div>
-
-        </div>
-
-        {% include stripes/logos/colorveil.html %}
-    </div>
+{% capture thecontent %}
+{% assign testimonials = site.testimonials | sort: 'by', 'last' %}
+{% for testimonial in testimonials %}
+    {% include templates/testimonial.html %}
+{% endfor %}
+{% endcapture %}
+{% include templates/contentsection.html heading="Testimonials" %}
