Add ColorVeil Help and License pages, improve layouts structure

--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -2,7 +2,7 @@
 app    : colorveil
 layout : app-page
 active : download
-bottom_stripe : stripes/bottom/download.html
+bottom_stripe : stripes/bottom/colorveil-download.html
 ---
 
 {% capture thecontent %}
@@ -23,3 +23,9 @@ bottom_stripe : stripes/bottom/download.html
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
+
+<div class="text-xs-center m-b-2">
+    <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/ColorVeil.shtml" target="_blank">
+        <img src="/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+    </a>
+</div>
