--- a/colorveil/windows/history/index.html
+++ b/colorveil/windows/history/index.html
@@ -9,7 +9,7 @@ active : history
     <li class="list-group-item">Added a customizable keyword shortcut to turn the color veil on and off</li>
     <li class="list-group-item">Added an option to automatically start ColorVeil on system startup</li>
     <li class="list-group-item">Added the ability to select the veil color by entering a HTML color code or name</li>
-    <li class="list-group-item">Improved and simplified Settings window, with pagination</li>
+    <li class="list-group-item">Improved and simplified Settings window, with tabs</li>
     <li class="list-group-item">Added a basic Check for Updates feature</li>
     <li class="list-group-item">Added 32-bit and 64-bit MSI (Windows Installer) installation packages</li>
     <li class="list-group-item"><time class="text-muted"><small>June 21, 2016</small></time></li>
