Improved layout structure and ColorVeil pages

--- a/_testimonials/colorveil/middlewichhigh.html
+++ b/_testimonials/colorveil/middlewichhigh.html
@@ -8,4 +8,4 @@ date  : 2016-05-04
 words : []
 ---
 
-<p>"At one stroke, Middlewich High School has been able to improve its staff's health by reducing eye strain, while also broadening access to learning opportunities for many of its students, all at zero cost to the taxpayer. We are highly satisfied with this outcome, commend the developer for his generous work and would very much recommend ColorVeil to other schools." <a href="/colorveil/testimonials/middlewichhigh/">Read More</a></p>
+<p>"At one stroke, Middlewich High School has been able to improve its staff's health by reducing eye strain, while also broadening access to learning opportunities for many of its students, all at zero cost to the taxpayer. We are highly satisfied with this outcome, commend the developer for his generous work and would very much recommend ColorVeil to other schools."<br /><a href="/colorveil/testimonials/middlewichhigh/">Read the entire testimonial</a></p>
