--- a/colorveil/windows/help/index.html
+++ b/colorveil/windows/help/index.html
@@ -4,13 +4,17 @@ app    : colorveil
 layout : app-page
 ---
 
+    <!-- Main Content -->
+    <div class="container main-content">
+
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-lg-10 col-lg-offset-1">
                 <h2 class="help-heading">ColorVeil Help</h2>
 
                 <div class="help-section">
                     <h3 class="help-section-heading">Running ColorVeil for the first time</h3>
                     <p>When you first open ColorVeil, your entire screen will get an Orange tint, and you will be presented with the following welcome screen:</p>
+                    <p><img class="img-fluid" src="/img/apps/colorveil/help/colorveil-windows-help-welcome-screen.png" alt="ColorVeil Welcome Screen" /></p>
                     <p>
                         The welcome screen tells you how to find the ColorVeil icon, toggle the veil, and open Settings. To stop seeing this screen every time you open Colorveil, uncheck
                         the <b>Show this screen at startup</b> check box.
@@ -22,7 +26,7 @@ layout : app-page
                     <p>To toggle the color veil, do one of the following:</p>
                     <ul>
                         <li>Click the ColorVeil icon in the notification area, at the far right of the Windows taskbar.</li>
-                        <li>Press the <kdb>Ctrl+F11</kbd> customizable keyboard shortcut.</li>
+                        <li>Press the <kbd>Ctrl+F11</kbd> customizable keyboard shortcut.</li>
                         <li>If the Settings window is open, click the <b>Turn on/off veil</b> button near the top right corner.</li>
                     </ul>
                 </div>
@@ -34,7 +38,7 @@ layout : app-page
                         <li>Right-click the ColorVeil icon in the notification area, at the far right of the Windows taskbar.</li>
                         <li>Try running ColorVeil again, by clicking its Start Menu or Desktop shortcut.</li>
                     </ul>
-                    <p><img class="img-fluid" src="/img/apps/colorveil/help/colorveil-windows-help-settings.png" /></p>
+                    <p><img class="img-fluid" src="/img/apps/colorveil/help/colorveil-windows-help-settings.png" alt="ColorVeil Settings Window" /></p>
                 </div>
 
                 <div class="help-section">
@@ -48,3 +52,5 @@ layout : app-page
 
             </div>
         </div>
+
+    </div>
