--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -27,13 +27,19 @@ bottom_stripe : stripes/bottom/colorveil-download.html
         {% endcapture %}
         {% include templates/contentsection.html heading="Portable" %}
 
-        <div class="text-xs-center m-b-2">
+        <!-- ColorVeil Featured Logos -->
+        <div class="featured-logos">
             <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/ColorVeil.shtml" target="_blank">
-                <img src="/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+                <img height="120" class="featured-logo" src="/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+            </a>
+            <a href="http://colorveil.software.informer.com" target="_blank">
+                <img height="120" class="featured-logo" src="/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
             </a>
         </div>
+
     </div>
+
 
     <div class="container stripe stripe-bottom">
         <p>ColorVeil is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business, non-profit, and for-profit. Before using ColorVeil, you must accept its <a href="/colorveil/windows/license/">License Agreement</a>.</p>
-    </div>    
+    </div>
