Create first CinemaDrape pages and includes

--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -2,7 +2,6 @@
 app    : colorveil
 layout : app-page
 active : download
-bottom_stripe : stripes/bottom/colorveil-download.html
 ---
 
     <!-- Main Content -->
@@ -27,7 +26,7 @@ bottom_stripe : stripes/bottom/colorveil-download.html
         {% endcapture %}
         {% include templates/contentsection.html heading="Portable" %}
 
-        <!-- ColorVeil Featured Logos -->
+        <!-- ColorVeil Clean Awards -->
         <div class="featured-logos">
             <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/ColorVeil.shtml" target="_blank">
                 <img height="120" class="featured-logo" src="/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
