Add the rest of CinemaDrape pages, and the main Reviews page * add CinemaDrape logos * add CinemaDrape reviews and testimonials

--- a/_testimonials/colorveil/arrowsmith.html
+++ b/_testimonials/colorveil/arrowsmith.html
@@ -1,11 +1,14 @@
 ---
 guid  : 7f1da397a5f443d4a728ae7cf1c829a0
-title : defaultshiva about ColorVeil
 app   : ColorVeil
-by    : St Edmund Arrowsmith Catholic High School, UK
-link  :
+by    : St Edmund Arrowsmith Catholic High School
+link  : /colorveil/testimonials/arrowsmith/
 date  : 2016-04-29
 words : []
 ---
 
-"As Head of Learning support we have been looking for the last few years to support children and young people with Dyslexia / Meares Irlen syndrome by way of coloured overlays, but have never been able to find a solution that works on computers. ColorVeil gives us the perfect solution, allowing full customisation by way of overlay to match the colours stated by the optometrist, removing a significant barrier to that young person's learning."
+<p>
+    "ColorVeil gives us the perfect solution for children and young people with Dyslexia / Meares Irlen syndrome, allowing
+     full customisation to match the colours stated by the optometrist."
+     <a href="/colorveil/testimonials/arrowsmith/">Read More</a>
+</p>
