--- a/_testimonials/colorveil/greatwebsiteplans.html
+++ b/_testimonials/colorveil/greatwebsiteplans.html
@@ -1,10 +1,12 @@
 ---
 guid  : 7f1da397a5f443d4a728ae7cf1c829a0
-title : Greatwebsiteplans.com about ColorVeil
 app   : ColorVeil
 by    : Greatwebsiteplans.com
 link  : https://greatwebsiteplans.com/resources/
 words : [indispensable, kindness]
 ---
 
-<p>"This is an indispensable screen brightness FREE software used to prevent eye strain. I highly recommend it and use it frequently during long work days. They've done a kindness to people by making it available to download freely, as so many of us use very bright screens."</p>
+<p>
+    "This is an indispensable software used to prevent eye strain. I highly recommend it and use it frequently during long work
+     days. They've done a kindness to people by making it available to download freely."
+ </p>
