--- a/injuredpixels/android/license/index.html
+++ b/injuredpixels/android/license/index.html
@@ -1,5 +1,5 @@
 ---
-app    : colortypist-windows
+app    : injuredpixels-android
 layout : app-page
 ---
 
@@ -7,9 +7,9 @@ layout : app-page
 <div class="container main-content">
 
     {% capture thecontent %}
-    <h3 class="page-heading">Colortypist License Agreement</h3>
-    <p>Copyright (C) 2011-2016 Aurelitec. All Rights Reserved.</p>
-    <p>Colortypist is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business, non-profit, and for-profit. "Free" in the preceding sentence means that there is no cost or charge associated with the installation and use of Colortypist.</p>
+    <h3 class="page-heading">InjuredPixels for Android License Agreement</h3>
+    <p>Copyright (C) 2016 Aurelitec. All Rights Reserved.</p>
+    <p>InjuredPixels is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business, non-profit, and for-profit. "Free" in the preceding sentence means that there is no cost or charge associated with the installation and use of InjuredPixels.</p>
     <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software (the "Software"), to use the Software without restriction, including the rights to use, copy, publish, and distribute the Software, and to permit persons to whom the Software is furnished to do so.</p>
     <p>You may not modify, adapt, rent, lease, loan, sell, or create derivative works based upon the Software or any part thereof.</p>
     <p>The above copyright notice and this permission notice shall be included in all copies of the Software.</p>
