Start adding SEO titles and metas to pages * add app home pages redirects

--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -3,6 +3,9 @@ active : download
 app    : cinemadrape-windows
 appurl : /cinemadrape/windows/
 layout : app-page
+
+title           : CinemaDrape for Windows - Free Download
+description     : Download, install and run CinemaDrape on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
 ---
 
 {% capture thecontent %}
