--- a/cinemadrape/windows/index.html
+++ b/cinemadrape/windows/index.html
@@ -4,6 +4,10 @@ app             : cinemadrape-windows
 appurl          : /cinemadrape/windows/
 layout          : app-page
 redirect_from   : "/cinemadrape/"
+
+title           : CinemaDrape - Focus on your current task on screen
+description     : CinemaDrape helps you focus on your current task, by instantly blanking or dimming the other less important areas on web pages or your Desktop.
+image           : /img/apps/cinemadrape/cinemadrape-jumbotron-shot.jpg
 ---
 
 {% capture thecontent %}
