--- a/colortypist/windows/history/index.html
+++ b/colortypist/windows/history/index.html
@@ -3,6 +3,9 @@ active : history
 app    : colortypist-windows
 appurl : /colortypist/windows/
 layout : app-page
+
+title       : Colortypist Version History - What's new and improved
+description : View Colortypist's full version history and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
