--- a/colortypist/windows/index.html
+++ b/colortypist/windows/index.html
@@ -1,8 +1,9 @@
 ---
-active : overview
-app    : colortypist-windows
-appurl : /colortypist/windows/
-layout : app-page
+active          : overview
+app             : colortypist-windows
+appurl          : /colortypist/windows/
+layout          : app-page
+redirect_from   : "/colortypist/"
 ---
 
 {% capture thecontent %}
