--- a/colorveil/windows/history/index.html
+++ b/colorveil/windows/history/index.html
@@ -3,6 +3,9 @@ active : history
 app    : colorveil-windows
 appurl : /colorveil/windows/
 layout : app-page
+
+title       : ColorVeil Version History - What's new and improved
+description : View ColorVeil's full version history and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
