--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -1,8 +1,10 @@
 ---
-active: overview
-app    : colorveil-windows
-appurl : /colorveil/windows/
-layout : app-page
+active          : overview
+app             : colorveil-windows
+appurl          : /colorveil/windows/
+layout          : app-page
+redirect_from   : "/colorveil/"
+
 ---
 
 {% capture thecontent %}
