--- a/htmtied/windows/history/index.html
+++ b/htmtied/windows/history/index.html
@@ -3,6 +3,9 @@ active : history
 app    : htmtied-windows
 appurl : /htmtied/windows/
 layout : app-page
+
+title       : HTMtied Version History - What's new and improved
+description : View HTMtied's full version history and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
