--- a/htmtied/windows/index.html
+++ b/htmtied/windows/index.html
@@ -1,8 +1,9 @@
 ---
-active : overview
-app    : htmtied-windows
-appurl : /htmtied/windows/
-layout : app-page
+active          : overview
+app             : htmtied-windows
+appurl          : /htmtied/windows/
+layout          : app-page
+redirect_from   : "/htmtied/"
 ---
 
 {% capture thecontent %}
