--- a/injuredpixels/android/history/index.html
+++ b/injuredpixels/android/history/index.html
@@ -3,6 +3,9 @@ active : history
 app    : injuredpixels-android
 appurl : /injuredpixels/android/
 layout : app-page
+
+title       : InjuredPixels For Android - Version History - What's new
+description : View full version history for InjuredPixels for Android, and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
