--- a/injuredpixels/windows/index.html
+++ b/injuredpixels/windows/index.html
@@ -1,8 +1,9 @@
 ---
-active : overview
-app    : injuredpixels-windows
-appurl : /injuredpixels/windows/
-layout : app-page
+active          : overview
+app             : injuredpixels-windows
+appurl          : /injuredpixels/windows/
+layout          : app-page
+redirect_from   : "/injuredpixels/"
 ---
 
 {% capture thecontent %}
