--- a/pixelhealer/windows/history/index.html
+++ b/pixelhealer/windows/history/index.html
@@ -3,6 +3,9 @@ active : history
 app    : pixelhealer-windows
 appurl : /pixelhealer/windows/
 layout : app-page
+
+title       : PixelHealer Version History - What's new and improved
+description : View PixelHealer's full version history and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
