--- a/pixelhealer/windows/index.html
+++ b/pixelhealer/windows/index.html
@@ -1,8 +1,9 @@
 ---
-active : overview
-app    : pixelhealer-windows
-appurl : /pixelhealer/windows/
-layout : app-page
+active          : overview
+app             : pixelhealer-windows
+appurl          : /pixelhealer/windows/
+layout          : app-page
+redirect_from   : "/pixelhealer/"
 ---
 
 {% capture thecontent %}
