--- a/thumbico/windows/index.html
+++ b/thumbico/windows/index.html
@@ -1,8 +1,9 @@
 ---
-active : overview
-app    : thumbico-windows
-appurl : /thumbico/windows/
-layout : app-page
+active          : overview
+app             : thumbico-windows
+appurl          : /thumbico/windows/
+layout          : app-page
+redirect_from   : "/thumbico/"
 ---
 
 {% capture thecontent %}
