--- a/whatsmyco/web/history/index.html
+++ b/whatsmyco/web/history/index.html
@@ -1,8 +1,11 @@
 ---
+active : history
 app    : whatsmyco-web
 appurl : /whatsmyco/web/
 layout : app-page
-active : history
+
+title       : WhatsMyCo Version History - What's new and improved
+description : View WhatsMyCo's full version history and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
