--- a/cinemadrape/windows/help/index.html
+++ b/cinemadrape/windows/help/index.html
@@ -3,6 +3,9 @@ active : help
 app    : cinemadrape-windows
 appurl : /cinemadrape/windows/
 layout : app-page
+
+title           : CinemaDrape Help - Learn how to improve focus and concentration
+description     : Learn how to use CinemaDrape to improve your concentration and focus on your current task on screen by blacking out other less important screen areas.
 ---
 
 {% capture thecontent %}
