--- a/cinemadrape/windows/history/index.html
+++ b/cinemadrape/windows/history/index.html
@@ -3,6 +3,9 @@ active : history
 app    : cinemadrape-windows
 appurl : /cinemadrape/windows/
 layout : app-page
+
+title       : CinemaDrape Version History - What's new and improved
+description : View CinemaDrape's full version history and see a comprehensive list of new features and improvements.
 ---
 
 {% capture thecontent %}
