--- a/cinemadrape/windows/license/index.html
+++ b/cinemadrape/windows/license/index.html
@@ -2,6 +2,9 @@
 app    : cinemadrape-windows
 appurl : /cinemadrape/windows/
 layout : app-page
+
+title           : CinemaDrape License Agreement - Free for home and business
+description     : You are free to use CinemaDrape to focus on your current task, by blanking or dimming other screen areas. Read the full License Agreement.
 ---
 
 {% capture thecontent %}
