--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -3,6 +3,9 @@ active : download
 app    : colorveil-windows
 appurl : /colorveil/windows/
 layout : app-page
+
+title           : ColorVeil for Windows - Free Download
+description     : Download, install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
 ---
 
 {% capture thecontent %}
