--- a/injuredpixels/android/download/index.html
+++ b/injuredpixels/android/download/index.html
@@ -3,6 +3,9 @@ active : download
 app    : injuredpixels-android
 appurl : /injuredpixels/android/
 layout : app-page
+
+title           : InjuredPixels for Android - Free Install
+description     : Install and run InjuredPixels on any smartphone or tablet with Android version 4.4 and above.
 ---
 
 {% capture thecontent %}
