--- a/whatsmyco/web/index.html
+++ b/whatsmyco/web/index.html
@@ -1,8 +1,9 @@
 ---
-active : overview
-app    : whatsmyco-web
-appurl : /whatsmyco/web/
-layout : app-page
+active          : overview
+app             : whatsmyco-web
+appurl          : /whatsmyco/web/
+layout          : app-page
+redirect_from   : "/whatsmyco/"
 ---
 
 {% capture thecontent %}
