Split CSS file into components, add Apps page

--- a/apps/index.html
+++ b/apps/index.html
@@ -1,7 +1,16 @@
 ---
-layout  : simple-page
+layout  : default-page
 heading : Apps
 ---
+{% include jumbotrons/info.html heading="Apps" %}
 
-{% include jumbotrons/cinemadrape-windows.html %}
-{% include jumbotrons/colortypist-windows.html %}
+<div class="apps-listing">
+    {% include jumbotrons/cinemadrape-windows.html %}
+    {% include jumbotrons/colorveil-windows.html %}
+    {% include jumbotrons/injuredpixels-windows.html %}
+    {% include jumbotrons/pixelhealer-windows.html %}
+    {% include jumbotrons/colortypist-windows.html %}
+    {% include jumbotrons/whatsmyco-web.html %}
+    {% include jumbotrons/thumbico-windows.html %}
+    {% include jumbotrons/htmtied-windows.html %}
+</div>
