Add Support and Privacy Policy pages, and Sponsored Carousel item

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@ layout  : default-page
     <li data-target="#homepage-carousel" data-slide-to="5"></li>
     <li data-target="#homepage-carousel" data-slide-to="6"></li>
     <li data-target="#homepage-carousel" data-slide-to="7"></li>
+    <li data-target="#homepage-carousel" data-slide-to="8"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
+        {% include jumbotrons/east-tec.html %}
+    </div>
+    <div class="carousel-item">
         {% include jumbotrons/cinemadrape-windows.html %}
     </div>
     <div class="carousel-item">
